force-app/main/default/objects/filegen__Batch_Control_Record__c/filegen__Batch_Control_Record__c.object-meta.xml
<CustomObject>
    <label>Batch Control Record</label>
    <nameField>
        <displayFormat>BCR-{0000000000}</displayFormat>
        <label>Batch Control Record  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Control Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>