force-app/main/default/objects/filegen__Batch_Control_Record__c/fields/filegen__Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>filegen__Batch_Number__c</fullName>
    <label>Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>