force-app/main/default/objects/filegen__Batch_Control_Record__c/fields/filegen__Company_Identification__c.field-meta.xml
<CustomField>
    <fullName>filegen__Company_Identification__c</fullName>
    <label>Company  Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>