force-app/main/default/objects/filegen__Batch_Control_Record__c/fields/filegen__Entry_Hash__c.field-meta.xml
<CustomField>
    <fullName>filegen__Entry_Hash__c</fullName>
    <label>Entry Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>