force-app/main/default/objects/filegen__Batch_Control_Record__c/fields/filegen__Service_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>filegen__Service_Class_Code__c</fullName>
    <label>Service Class  Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>