force-app/main/default/objects/filegen__Batch_Control_Record__c/fields/filegen__Total_Credit_Entry_Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>filegen__Total_Credit_Entry_Dollar_Amount__c</fullName>
    <label>Total Credit  Entry Dollar  Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>